# sv2

./: .gitignore  ANALYSIS.md  CHANGELOG.md  CLAUDE.md  README.md  RENAME_REVIEW.md  TECHNICAL_IMPROVEMENTS.md  TEXT_CONTENT_ANALYSIS_AND_PLAN.md  pyproject.toml
src/: inicio.py  manejador.py  user_config.json
src/components/: animations.py  assets_data.py  background.py  boundary.py  button.py  character.py  counter.py  cursor.py  events.py  image.py  magnifier.py  marker.py  object.py  objmask.py  pixelperfect.py  popups.py  screen.py  singleton.py  speechserver.py  spritesheet.py  text_loader.py  text_repository.py  textbox.py  texto.py  textoci.py  words.py
src/librerias/: animations.py  assets_data.py  button.py  configuration.py  objmask.py  palabra.py  pantalla.py  personaje.py  popups.py  spritesheet.py  text_loader.py  text_repository.py  texto.py  textoci.py  user_config.json
src/paginas/: actividad1.py  actividad2.py  menuauditivo.py  menucfg.py  menugeneral.py  menuvisual.py  pantalla10.py  pantalla11.py  pantalla2.py  pantalla3.py  pantalla4.py  pantalla5.py  pantalla6.py  pantalla8.py  pantalla9.py  playground.py
src/paginas/text/: content-hu.json  content.json
tools/: rename_review_apply.py  rename_spanish.py  rename_spanish_final.py  rename_spanish_final2.py  rename_spanish_final3.py
